<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dieselExpander"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Diesel"
            android:textStyle="bold"
            android:background="@drawable/rectangle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFF"
        android:orientation="vertical" >

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TableRow
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/min"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/max"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/avg"/>
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/unleadedHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/unleaded"/>
                <TextView
                    android:id="@+id/unleadedMin"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/unleadedMax"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/unleadedAvg"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>