<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFF"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/color"
            android:layout_width="@dimen/color_width"
            android:layout_height="@dimen/color_height"
            android:background="@drawable/rectangle"
            android:gravity="center_vertical"
            android:text=""
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/overallExpander"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/overall"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFF"
        android:orientation="vertical" >

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pricesOverview"
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="5dp">

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/blankHeading"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/maxHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/max"/>
                <TextView
                    android:id="@+id/avgHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/avg"/>
                <TextView
                    android:id="@+id/minHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/min"/>
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/unleadedHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/unleaded"/>
                <TextView
                    android:id="@+id/unleadedMax"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/unleadedAvg"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/unleadedMin"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/superUnleadedHeading"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/superUnleadedMax"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/superUnleadedAvg"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/superUnleadedMin"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dieselHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/diesel"/>
                <TextView
                    android:id="@+id/dieselMax"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/dieselAvg"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/dieselMin"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/premiumDieselHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/premiumDiesel"/>
                <TextView
                    android:id="@+id/premiumDieselMax"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/premiumDieselAvg"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/premiumDieselMin"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lpgHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/lpg"/>
                <TextView
                    android:id="@+id/lpgMax"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/lpgAvg"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/lpgMin"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lrpHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/lrp"/>
                <TextView
                    android:id="@+id/lrpMax"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/lrpAvg"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/lrpMin"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</LinearLayout>